--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #average {
+            margin: 16px 0;
+            padding: 10px;
+            background-color: #f0f0f0;
+            border: 2px solid #0074D9;
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 20px;
+            color: #0074D9;
+        }
+    </style>
 </head>
 <body>
     <h2>Notas Asignatura Front-End</h2>
+
+     <div id="average">Promedio General del Curso: N/A </div>
     <form id="studentForm">
     <div>
         <label for="name">Nombre : </label>
@@ -28,6 +42,7 @@
         <th>Nombre</th>
         <th>Apellido</th>
         <th>Nota</th>
+         <th>Acciones</th>
     </tr>
 </thead>
 <tbody>
